--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "mongoose": "^6.1.4",
     "multer": "^1.4.4"
   }
 }
